mruby-sys/src/ffi.rs

extern "C" {
    #[link_name = "\u{1}_mrb_get_argv"]
    pub fn mrb_get_argv(mrb: *mut mrb_state) -> *mut mrb_value;
}
extern "C" {
    /// Call existing ruby functions.
    ///
    ///      #include <stdio.h>
    ///      #include <mruby.h>
    ///      #include "mruby/compile.h"
    ///
    ///      int
    ///      main()
    ///      {
    ///        mrb_int i = 99;
    ///        mrb_state *mrb = mrb_open();
    ///
    ///        if (!mrb) { }
    ///        FILE *fp = fopen("test.rb","r");
    ///        mrb_value obj = mrb_load_file(mrb,fp);
    ///        mrb_funcall(mrb, obj, "method_name", 1, mrb_fixnum_value(i));
    ///        fclose(fp);
    ///        mrb_close(mrb);
    ///       }
    /// @param [mrb_state*] mrb_state* The current mruby state.
    /// @param [mrb_value] mrb_value A reference to an mruby value.
    /// @param [const char*] const char* The name of the method.
    /// @param [mrb_int] mrb_int The number of arguments the method has.
    /// @param [...] ... Variadic values(not type safe!).
    /// @return [mrb_value] mrb_value mruby function value.
    #[link_name = "\u{1}_mrb_funcall"]
    pub fn mrb_funcall(
        arg1: *mut mrb_state,
        arg2: mrb_value,
        arg3: *const ::std::os::raw::c_char,
        arg4: mrb_int,
        ...
    ) -> mrb_value;
}
extern "C" {
    /// Call existing ruby functions. This is basically the type safe version of mrb_funcall.
    ///
    ///      #include <stdio.h>
    ///      #include <mruby.h>
    ///      #include "mruby/compile.h"
    ///      int
    ///      main()
    ///      {
    ///        mrb_int i = 99;
    ///        mrb_state *mrb = mrb_open();
    ///
    ///        if (!mrb) { }
    ///        mrb_sym m_sym = mrb_intern_lit(mrb, "method_name"); // Symbol for method.
    ///
    ///        FILE *fp = fopen("test.rb","r");
    ///        mrb_value obj = mrb_load_file(mrb,fp);
    ///        mrb_funcall_argv(mrb, obj, m_sym, 1, &obj); // Calling ruby function from test.rb.
    ///        fclose(fp);
    ///        mrb_close(mrb);
    ///       }
    /// @param [mrb_state*] mrb_state* The current mruby state.
    /// @param [mrb_value] mrb_value A reference to an mruby value.
    /// @param [mrb_sym] mrb_sym The symbol representing the method.
    /// @param [mrb_int] mrb_int The number of arguments the method has.
    /// @param [const mrb_value*] mrb_value* Pointer to the object.
    /// @return [mrb_value] mrb_value mruby function value.
    /// @see mrb_funcall
    #[link_name = "\u{1}_mrb_funcall_argv"]
    pub fn mrb_funcall_argv(
        arg1: *mut mrb_state,
        arg2: mrb_value,
        arg3: mrb_sym,
        arg4: mrb_int,
        arg5: *const mrb_value,
    ) -> mrb_value;
}
extern "C" {
    /// Call existing ruby functions with a block.
    #[link_name = "\u{1}_mrb_funcall_with_block"]
    pub fn mrb_funcall_with_block(
        arg1: *mut mrb_state,
        arg2: mrb_value,
        arg3: mrb_sym,
        arg4: mrb_int,
        arg5: *const mrb_value,
        arg6: mrb_value,
    ) -> mrb_value;
}
extern "C" {
    /// Create a symbol
    ///
    ///     # Ruby style:
    ///     :pizza # => :pizza
    ///
    ///     // C style:
    ///     mrb_sym m_sym = mrb_intern_lit(mrb, "pizza"); //  => :pizza
    /// @param [mrb_state*] mrb_state* The current mruby state.
    /// @param [const char*] const char* The name of the method.
    /// @return [mrb_sym] mrb_sym A symbol.
    #[link_name = "\u{1}_mrb_intern_cstr"]
    pub fn mrb_intern_cstr(arg1: *mut mrb_state, arg2: *const ::std::os::raw::c_char) -> mrb_sym;
}
extern "C" {
    #[link_name = "\u{1}_mrb_intern"]
    pub fn mrb_intern(
        arg1: *mut mrb_state,
        arg2: *const ::std::os::raw::c_char,
        arg3: usize,
    ) -> mrb_sym;
}
extern "C" {
    #[link_name = "\u{1}_mrb_intern_static"]
    pub fn mrb_intern_static(
        arg1: *mut mrb_state,
        arg2: *const ::std::os::raw::c_char,
        arg3: usize,
    ) -> mrb_sym;
}
extern "C" {
    #[link_name = "\u{1}_mrb_intern_str"]
    pub fn mrb_intern_str(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_sym;
}
extern "C" {
    #[link_name = "\u{1}_mrb_check_intern_cstr"]
    pub fn mrb_check_intern_cstr(
        arg1: *mut mrb_state,
        arg2: *const ::std::os::raw::c_char,
    ) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_check_intern"]
    pub fn mrb_check_intern(
        arg1: *mut mrb_state,
        arg2: *const ::std::os::raw::c_char,
        arg3: usize,
    ) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_check_intern_str"]
    pub fn mrb_check_intern_str(arg1: *mut mrb_state, arg2: mrb_value) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_sym2name"]
    pub fn mrb_sym2name(arg1: *mut mrb_state, arg2: mrb_sym) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_mrb_sym2name_len"]
    pub fn mrb_sym2name_len(
        arg1: *mut mrb_state,
        arg2: mrb_sym,
        arg3: *mut mrb_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    #[link_name = "\u{1}_mrb_sym2str"]
    pub fn mrb_sym2str(arg1: *mut mrb_state, arg2: mrb_sym) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_malloc"]
    pub fn mrb_malloc(arg1: *mut mrb_state, arg2: usize) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_mrb_calloc"]
    pub fn mrb_calloc(
        arg1: *mut mrb_state,
        arg2: usize,
        arg3: usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_mrb_realloc"]
    pub fn mrb_realloc(
        arg1: *mut mrb_state,
        arg2: *mut ::std::os::raw::c_void,
        arg3: usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_mrb_realloc_simple"]
    pub fn mrb_realloc_simple(
        arg1: *mut mrb_state,
        arg2: *mut ::std::os::raw::c_void,
        arg3: usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_mrb_malloc_simple"]
    pub fn mrb_malloc_simple(arg1: *mut mrb_state, arg2: usize) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_mrb_obj_alloc"]
    pub fn mrb_obj_alloc(arg1: *mut mrb_state, arg2: mrb_vtype, arg3: *mut RClass) -> *mut RBasic;
}
extern "C" {
    #[link_name = "\u{1}_mrb_free"]
    pub fn mrb_free(arg1: *mut mrb_state, arg2: *mut ::std::os::raw::c_void);
}
extern "C" {
    #[link_name = "\u{1}_mrb_str_new"]
    pub fn mrb_str_new(
        mrb: *mut mrb_state,
        p: *const ::std::os::raw::c_char,
        len: usize,
    ) -> mrb_value;
}
extern "C" {
    /// Turns a C string into a Ruby string value.
    #[link_name = "\u{1}_mrb_str_new_cstr"]
    pub fn mrb_str_new_cstr(arg1: *mut mrb_state, arg2: *const ::std::os::raw::c_char)
        -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_str_new_static"]
    pub fn mrb_str_new_static(
        mrb: *mut mrb_state,
        p: *const ::std::os::raw::c_char,
        len: usize,
    ) -> mrb_value;
}
extern "C" {
    /// Creates new mrb_state.
    ///
    /// @return
    ///      Pointer to the newly created mrb_state.
    #[link_name = "\u{1}_mrb_open"]
    pub fn mrb_open() -> *mut mrb_state;
}
extern "C" {
    /// Create new mrb_state with custom allocators.
    ///
    /// @param f
    ///      Reference to the allocation function.
    /// @param ud
    ///      User data will be passed to custom allocator f.
    ///      If user data isn't required just pass NULL.
    /// @return
    ///      Pointer to the newly created mrb_state.
    #[link_name = "\u{1}_mrb_open_allocf"]
    pub fn mrb_open_allocf(f: mrb_allocf, ud: *mut ::std::os::raw::c_void) -> *mut mrb_state;
}
extern "C" {
    /// Create new mrb_state with just the MRuby core
    ///
    /// @param f
    ///      Reference to the allocation function.
    ///      Use mrb_default_allocf for the default
    /// @param ud
    ///      User data will be passed to custom allocator f.
    ///      If user data isn't required just pass NULL.
    /// @return
    ///      Pointer to the newly created mrb_state.
    #[link_name = "\u{1}_mrb_open_core"]
    pub fn mrb_open_core(f: mrb_allocf, ud: *mut ::std::os::raw::c_void) -> *mut mrb_state;
}
extern "C" {
    /// Closes and frees a mrb_state.
    ///
    /// @param mrb
    ///      Pointer to the mrb_state to be closed.
    #[link_name = "\u{1}_mrb_close"]
    pub fn mrb_close(mrb: *mut mrb_state);
}
extern "C" {
    /// The default allocation function.
    ///
    /// @see mrb_allocf
    #[link_name = "\u{1}_mrb_default_allocf"]
    pub fn mrb_default_allocf(
        arg1: *mut mrb_state,
        arg2: *mut ::std::os::raw::c_void,
        arg3: usize,
        arg4: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    #[link_name = "\u{1}_mrb_top_self"]
    pub fn mrb_top_self(arg1: *mut mrb_state) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_run"]
    pub fn mrb_run(arg1: *mut mrb_state, arg2: *mut RProc, arg3: mrb_value) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_top_run"]
    pub fn mrb_top_run(
        arg1: *mut mrb_state,
        arg2: *mut RProc,
        arg3: mrb_value,
        arg4: ::std::os::raw::c_uint,
    ) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_vm_run"]
    pub fn mrb_vm_run(
        arg1: *mut mrb_state,
        arg2: *mut RProc,
        arg3: mrb_value,
        arg4: ::std::os::raw::c_uint,
    ) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_vm_exec"]
    pub fn mrb_vm_exec(arg1: *mut mrb_state, arg2: *mut RProc, arg3: *mut mrb_code) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_p"]
    pub fn mrb_p(arg1: *mut mrb_state, arg2: mrb_value);
}
extern "C" {
    #[link_name = "\u{1}_mrb_obj_id"]
    pub fn mrb_obj_id(obj: mrb_value) -> mrb_int;
}
extern "C" {
    #[link_name = "\u{1}_mrb_obj_to_sym"]
    pub fn mrb_obj_to_sym(mrb: *mut mrb_state, name: mrb_value) -> mrb_sym;
}
extern "C" {
    #[link_name = "\u{1}_mrb_obj_eq"]
    pub fn mrb_obj_eq(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_value) -> mrb_bool;
}
extern "C" {
    #[link_name = "\u{1}_mrb_obj_equal"]
    pub fn mrb_obj_equal(arg1: *mut mrb_state, arg2: mrb_value, arg3: mrb_value) -> mrb_bool;
}
extern "C" {
    #[link_name = "\u{1}_mrb_equal"]
    pub fn mrb_equal(mrb: *mut mrb_state, obj1: mrb_value, obj2: mrb_value) -> mrb_bool;
}
extern "C" {
    #[link_name = "\u{1}_mrb_convert_to_integer"]
    pub fn mrb_convert_to_integer(mrb: *mut mrb_state, val: mrb_value, base: mrb_int) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_Integer"]
    pub fn mrb_Integer(mrb: *mut mrb_state, val: mrb_value) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_Float"]
    pub fn mrb_Float(mrb: *mut mrb_state, val: mrb_value) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_inspect"]
    pub fn mrb_inspect(mrb: *mut mrb_state, obj: mrb_value) -> mrb_value;
}
extern "C" {
    #[link_name = "\u{1}_mrb_eql"]
    pub fn mrb_eql(mrb: *mut mrb_state, obj1: mrb_value, obj2: mrb_value) -> mrb_bool;
}
extern "C" {
    #[link_name = "\u{1}_mrb_garbage_collect"]
    pub fn mrb_garbage_collect(arg1: *mut mrb_state);
}
extern "C" {
    #[link_name = "\u{1}_mrb_full_gc"]
    pub fn mrb_full_gc(arg1: *mut mrb_state);
}
extern "C" {
    #[link_name = "\u{1}_mrb_incremental_gc"]
    pub fn mrb_incremental_gc(arg1: *mut mrb_state);
}
extern "C" {
    #[link_name = "\u{1}_mrb_gc_mark"]
    pub fn mrb_gc_mark(arg1: *mut mrb_state, arg2: *mut RBasic);
}
extern "C" {
    #[link_name = "\u{1}_mrb_field_write_barrier"]
    pub fn mrb_field_write_barrier(arg1: *mut mrb_state, arg2: *mut RBasic, arg3: *mut RBasic);
}
extern "C" {
    #[link_name = "\u{1}_mrb_write_barrier"]
    pub fn mrb_write_barrier(arg1: *mut mrb_state, arg2: *mut RBasic);
}
